--- a/EntityFrameworkCore/EntityFrameworkCoreAdvancedQuerying/AdvancedQuerying/BookShop.Data/BookShop.Data.csproj
+++ b/EntityFrameworkCore/EntityFrameworkCoreAdvancedQuerying/AdvancedQuerying/BookShop.Data/BookShop.Data.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.1" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.0.23" />
   </ItemGroup>
 
   <ItemGroup>
