Adding initial migrations

--- a/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/appsettings.json
+++ b/WebAdvanced/WebApplicationWithIdentity/WebApplicationWithIdentity/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplicationWithIdentity-49A13E18-A06A-4736-96AE-3932FBB25B20;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-EFGPD5V\\SQLEXPRESS;Database=ApplicationWithIdentityDBContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
