Adding identity methods

--- a/WebAdvanced/IdentityDemo/IdentityDemo/appsettings.json
+++ b/WebAdvanced/IdentityDemo/IdentityDemo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IdentityDemo-15D2BAC7-D1FB-4560-BB8D-4C63A4B15F0B;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-EFGPD5V\\SQLEXPRESS;Database=IdentityUserDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
