Adding WebApi Authorization

--- a/WebAdvanced/WebApiDemo/WebApiDemo/appsettings.Development.json
+++ b/WebAdvanced/WebApiDemo/WebApiDemo/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+
+
+  "JwtSettings": {
+
+    "Secret": "super-secretuioiuoiuouyiuyiyi"
+
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
